DEBUG: test 'fixed' bug for <header> on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,7 +9,7 @@ MY STYLING
 }
 
 html {
-  scroll-behavior: smooth;/* For same-page anchor links. */
+  scroll-behavior: smooth;/* For same-page anchor links */
 }
 
 body {
@@ -18,7 +18,7 @@ body {
 
 .anchor {
   display: block;
-  height: 100px;/* Same as the header, below. */
+  height: 100px;/* Same as the header, below */
   margin-top: -100px;/* Same again... */
   visibility: hidden;
 }
@@ -26,7 +26,7 @@ body {
 header {
   background-color: #111;
   width: 100%;
-  height: 100px;
+  height: 15vh;
   position: fixed;
   .header-me {
     color: #f2f2f2;
@@ -40,7 +40,7 @@ header {
     padding: 20px 40px 20px 10px;
   }
   .header-samples {
-    display: none;/* Hides this link on the mobile version (low-res).*/
+    display: none;/* Hides this link on the mobile version (low-res) */
   }
   nav {
     ul {
@@ -49,7 +49,7 @@ header {
       li {
         display: inline-block;
         float: left;/* Gives error in VS Code but has desired behavior. Conflicts with "inline-block," but gets rid of the gap between links... */
-        list-style: none;/* Get rid of the ugly formatting from lists. */
+        list-style: none;/* Get rid of the ugly formatting from lists */
         padding: 0 10px;
         a {
           color: #f2f2f2;
@@ -69,7 +69,7 @@ main {
 
 .index-banner {
   width: 100%;
-  height: calc(100vh - 100px);/* "100px" is the specified height of the header, above */
+  height: calc(100vh - 15vh);/* "100px" is the specified height of the header, above */
   background-image: url('../img/pat_icon1-2[180].png');
   background-repeat: no-repeat;
   background-position: center;
@@ -116,8 +116,8 @@ span.highlight {
 /* INDEX - PROJECTS */
 
 section.index-projects {
-  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
-  height: calc(100vh - 100px);
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding) */
+  height: calc(100vh - 15vh);
   padding: 40px 40px;
   background-color: #493038;
   overflow: hidden;
@@ -164,8 +164,8 @@ section.index-projects p a {
 /* INDEX - ABOUT */
 
 section.index-about {
-  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
-  height: calc(100vh - 100px);
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding) */
+  height: calc(100vh - 15vh);
   padding: 40px 40px;
   background-color: #4b692f;
   overflow: hidden;
@@ -194,8 +194,8 @@ section.index-about article p {
 /* INDEX - CONTACT */
 
 section.index-contact {
-  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
-  height: calc(100vh - 100px);
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding) */
+  height: calc(100vh - 15vh);
   padding: 40px 40px;
   background-color: #802458;
   overflow: hidden;
@@ -231,7 +231,7 @@ section.index-contact ul li a {
 /* FOOTER */
 
 footer {
-  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding)*/
+  width: calc(100% - 80px);/* 100% - (40px from left padding) - (40px from right padding) */
   padding: 40px 40px;
   background-color: #111;
   overflow: hidden;
